--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A GraphQL API for getting coronavirus information.",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": {
     "name": "Bilal Ahmed Janjua",
