--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "graphql": "^14.6.0",
     "graphql-import": "^1.0.1",
     "graphql-type-json": "^0.3.1",
-    "novelcovid": "^1.0.7-b3"
+    "novelcovid": "^1.1.2"
   },
   "license": "MIT",
   "repository": {
